# dac-ch-guide

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/getting-started/: add-chap-core.md  chap-core-from-source.md  chap-setup.md  docker-compose-intro.md  docker-intro.md  install-apps.md  prerequisites.md  start-dhis2.md
docs/modelling/: chapkit-register.md  chapkit-scaffold.md  configured-models-curl.md  configured-models-ui.md  index.md  with-curl.md  with-ui.md
docs/operations/: backup-restore.md  database.md  logs.md  upgrading.md
docs/stylesheets/: extra.css
getting-started/add-chap-core/: index.html
getting-started/chap-core-from-source/: index.html
getting-started/chap-setup/: index.html
getting-started/docker-compose-intro/: index.html
getting-started/docker-intro/: index.html
getting-started/install-apps/: index.html
getting-started/prerequisites/: index.html
getting-started/start-dhis2/: index.html
modelling/: index.html
modelling/chapkit-register/: index.html
modelling/chapkit-scaffold/: index.html
modelling/configured-models-curl/: index.html
modelling/configured-models-ui/: index.html
modelling/with-curl/: index.html
modelling/with-ui/: index.html
operations/backup-restore/: index.html
operations/database/: index.html
operations/logs/: index.html
operations/upgrading/: index.html
overrides/: main.html
search/: search_index.json
src/dac_guides/: __init__.py  __main__.py  cli.py
