[project]
name = "dac-guides"
version = "0.1.0"
description = "Climate and health workshop guides for the DHIS2 Annual Conference"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.24.2",
]

[project.scripts]
dac-guides = "dac_guides.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pyright>=1.1.409",
  "ruff>=0.15.12",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportMissingModuleSource = false
